src/test/resources/com/puppycrawl/tools/checkstyle/checks/design/InputInnerClassCheck#methodTest2().mjava
	void methodTest2() { //error
		System.out.println("test2");
	}

